docs(research): #206 performance profiling report + Lever A/B roadmap
Why: #206's own acceptance criteria require a profiling report identifying
     the bottleneck and a follow-up Vector API issue before the issue can
     close. This document already tracked the exact ranked hypothesis
     (§2.1 #1, evaluation-scale/pruning-margin mismatch) that needed a
     distinguishing experiment -- this profiling pass runs it.
What: Added §14: decomposes the measured 9.95x wall-clock gap into 3.44x
      more nodes x 2.89x slower per node, splitting the roadmap into
      Lever A (per-node speed -- the only thing that moves the NPS gate)
      and Lever B (node count -- moves real strength/time-to-depth, does
      not move the gate). Accumulator review shows the copy-forward
      design is already cheaper than an in-place/reverse-delta
      alternative at this branching factor (not a candidate change).
      Vector API staged plan for addFeature/subtractFeature (Stage 1)
      and the evaluate() dot-product (Stage 2), with portability/
      maintenance costs (jdk.incubator.vector still incubator through
      JDK 21/25). Node-count investigation upgrades §2.1 Hypothesis 1
      from reasoned to measured: delta-pruning trigger rate collapses
      ~100-300x under NNUE vs Classical on two bench positions (existing
      counters only, no code changes), futility rate roughly halves --
      both are staticEval-margin gates tuned only against Classical.
      Cross-referenced the #217 benchmark-replacement rationale in one
      place (§14.6). Two new issues opened per this section's own
      recommendation: #218 (Vector API, Lever A) and #219 (NNUE
      calibration investigation, Lever B).
Out of scope: Implementing either Vector API or margin recalibration
      (both are #218/#219's scope, not this document's). Root-causing
      *why* NNUE's score distribution mismatches the fixed margins
      (compression vs bias vs both) -- left to #219's own diagnostics.
Closes #2